champs/unit_tests/invalid/space_after_directchar_invalid.s
#COMMENTAIRE
.comment "commentaire du fichier"

#COMMENTAIRE
#COMMENTAIRE
#COMMENTAIRE
.name	"test d'un name"

fork: fork % :life

load: or %:fork,r2,r3

life: and %:load,r2,r1

ldi 3, %4, r1
